Fix layout issue with Remove button

--- a/src/amo/components/EditableCollectionAddon/styles.scss
+++ b/src/amo/components/EditableCollectionAddon/styles.scss
@@ -79,6 +79,7 @@ div.EditableCollectionAddon-leaveNote {
   }
 }
 
+.EditableCollectionAddon-remove-button,
 .EditableCollectionAddon-leaveNote-button {
   overflow: hidden;
   white-space: nowrap;
